# sdl-gl-template

./: CMakeLists.txt  README.md  main.cpp  mathpls.h  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
glad/: glad.c  glad.h
shader/: mesh.frag  mesh.vert  quad_mesh.frag  quad_mesh.vert  sky.frag  sky.vert
